--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Courier", "Menlo", "Consolas";
+  font-family: Menlo, Monaco, Consolas, "Courier New";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -8,8 +8,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-.my {
-  margin: 0;
 }
