--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,15 @@
 body {
   margin: 0;
-  font-family: Menlo, Monaco, Consolas, "Courier New";
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.procent {
+  display: block;
+  height: 98vh;
+  width: 98vw;
+  margin-block: 1vh 0;
+  margin-inline: 1vw 0;
+  background-color: rgb(93, 202, 179);
 }
