--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@ body {
 .procent {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
   height: 98vh;
   width: 98vw;
   margin-block: 1vh 0;
@@ -21,6 +21,14 @@ body {
 .title {
   order: 1;
   background-color: blanchedalmond;
+}
+
+.buttons {
+  background-color: beige;
+}
+
+.info {
+  background-color: aquamarine;
 }
 
 .board {
