--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: Acme, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-size: 1.4em;
+  font-weight: bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-image: url("./image/bg.jpg"); */
@@ -19,7 +21,10 @@ body {
 }
 
 .title {
-  background-color: blanchedalmond;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .buttons {
@@ -49,4 +54,8 @@ body {
 
 .box > img {
   width: 100%;
+}
+
+.welcome {
+  display: inline-block;
 }
