--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,8 +69,11 @@ body {
 }
 
 .box {
-  /* margin: 3px; */
-  background-color: yellow;
+  background-size: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 4em;
 }
 
 .box > img {
